<resources>
    <string name="app_name">Bug Defender</string>
    <string name="title_activity_main">Bug Defender</string>
    <string name="startGame_button">Start Game</string>
    <string name="preference_button">preferences</string>
    <string name="about_button">about the game</string>
    <string name="game_icon">game icon</string>
    <string name="close_button">Close</string>
    <string name="game_name">"Bug\nDefender"</string>
    <string name="about_text">Bug Defender is a tower defense game created as part of a study project.</string>
    <string name="preferences_text">set your preferences:</string>
    <string name="preference_music">music</string>
    <string name="menuBtn">Menu</string>
    <string name="sound">sounds</string>
    <string name="pauseGame">main menu</string>
    <string name="resumeGame">resume game</string>
    <string name="moneyWarning">not enough money</string>
    <string name="bossLevel">Boss Wave</string>
    <string name="wave">Wave: </string>
    <string name="coins">coins</string>
    <string name="back">main menu</string>
    <string name="low">low</string>
    <string name="avg">avg</string>
    <string name="high">high</string>
    <string name="restart">restart game</string>
    <string name="lostText">Game Over!</string>
    <string name="timer_image">Timer</string>
    <string name="delete_tower_button">Delete tower</string>
    <string name="build_tower_button">Build a tower</string>
    <string name="upgrade_tower_button">Upgrade tower</string>
    <string name="progress_ball_image">Progress bar decor image</string>
    <string name="health_ball_image">Health bar decor image</string>
    <string name="waveReached">reached Wave: </string>
    <string name="enemyMade">killed Enemies: </string>
    <string name="timeMade">time played:</string>
    <string name="goOnTutorial">Go On</string>
    <string name="tutorialTitel">Tutorial</string>
    <string name="tutorialWelcome">Welcome to Bug Defender! To skip the tutorial just close this Window.</string>
    <string name="tutorialScroll">The playing field where you can place towers is scrollable.</string>
    <string name="tutorialDeleteBtn">The left one enables you to destroy built towers.</string>
    <string name="tutorialUpgradeBtn">The right one is for upgrading your built towers.</string>
    <string name="tutorialBuildBtn">The middle one is for building your towers onto a field. Hold the button to select a different tower.</string>
    <string name="tutorialTopGui">The top menu displays game indicators.</string>
    <string name="tutorialWave">In the upper right corner you can see the current wave.</string>
    <string name="tutorialCoins">In the upper left corner you can see the coins that are at your disposal.</string>
    <string name="tutorialLifeBar">The left bar displays your remaining healthpoints.</string>
    <string name="tutoriaWaveBar">The right bar displays your wave progress and how many enemies are missing until you reach the next level.</string>
    <string name="tutorialMenuButton">The center button opens up the settings menu.</string>
    <string name="quality">image quality ↗</string>
    <string name="qualityTitle">image quality</string>
    <string name="waveDisplayText">Wave</string>
    <string name="tutorialBottomGui">This is the bottom menu, where you can build, destroy and upgrade your towers.</string>
</resources>