<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <CheckBoxPreference
        android:key="music_pref"
        android:title="@string/preference_music"
        app:defaultValue="@bool/musicCheckbox"
        app:iconSpaceReserved="false" />
    <CheckBoxPreference
        android:defaultValue="@bool/soundCheckbox"
        android:key="sound_pref"
        android:title="@string/sound"
        app:iconSpaceReserved="false" />
    <ListPreference
        android:defaultValue="@string/qualitySetting"
        android:entries="@array/graphics_quality"
        android:entryValues="@array/graphics_quality"
        android:key="quality_pref"
        app:dialogTitle="@string/qualityTitle"
        app:iconSpaceReserved="false"
        app:title="@string/quality" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="tutorial_pref"
        android:title="@string/tutorialTitel"
        app:iconSpaceReserved="false"
        app:isPreferenceVisible="false" />
</PreferenceScreen>